# compressr-app

./: .gitignore  .prettierignore  Cargo.toml  Makefile  README.md  index.html  package.json
.AppImage/: createAppImage.sh
.AppImage/.AppDir/: AppRun  compressr.desktop
.AppImage/.AppDir/usr/share/metainfo/: compressr.appdata.xml
.github/workflows/: release.yml  test.yml
languages/: en_us.json  es_es.json  fr_fr.json  ja_jp.json  nl_nl.json  pt_pt.json  ru_ru.json  uk_ua.json  zh_cn.json
src/: components.rs  main.rs  models.rs  services.rs  views.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: image_processor.rs  main.rs
src/components/: app.rs  header.rs  settings.rs  state.rs  window.rs
src/components/AboutCard/: index.jsx
src/components/App/: index.jsx
src/components/CompressButton/: compressbutton.module.css  index.jsx
src/components/CompressSlider/: index.jsx
src/components/DropzoneButton/: index.jsx
src/components/FileTable/: index.jsx
src/components/HeaderBar/: headerbar.module.css  index.jsx
src/components/SplitButton/: index.jsx
src/context/MainContextProvider/: index.jsx
src/models/: language.rs  version.rs
src/reducer/MainReducer/: index.jsx
src/reducer/MainReducer/Actions/: index.js
src/reducer/MainReducer/Actions/ActionTypes/: index.js
src/routes/About/: about.module.css  index.jsx
src/routes/Home/: index.jsx
src/routes/NotFound/: index.jsx
src/routes/Settings/: index.jsx  settings.module.css
src/services/: folder_scanner.rs  image_service.rs  theme_service.rs  update_service.rs
src/views/: about_view.rs  error_view.rs  main_view.rs  no_update_view.rs  results_view.rs  settings_view.rs  update_view.rs
