[package]
name = "compressr-app"
description = "Compressr is a simple image compression tool built with Rust and Iced. It supports various image formats and provides an easy-to-use interface for compressing images while maintaining quality."
readme = "README.md"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.0"
authors = ["CodeDead <admin@codedead.com>"]
license = "GPL-3.0-only"

[dependencies]
iced = { version = "0.14", features = ["tokio", "image"] }
image = { version = "0.25", features = ["default-formats" ] }
rfd = "0.17.2"
anyhow = "1.0"
resvg = "0.47.0"
tiny-skia = "0.12.0"
iced_aw = { version = "0.13.0", features = ["badge"] }
tokio = "1.49.0"

[profile.release]
lto = true
strip = "symbols"
debug = false
panic = "abort"
opt-level = "z"
codegen-units = 1
