[package]
name = "compressr-app"
description = "Compressr is a simple image compression tool built with Rust and Iced. It supports various image formats and provides an easy-to-use interface for compressing images while maintaining quality."
readme = "README.md"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"
authors = ["CodeDead <admin@codedead.com>"]
license = "GPL-3.0-only"

[dependencies]
iced = { version = "0.14.0", features = ["tokio", "image"] }
image = { version = "0.25.10", features = ["default-formats" ] }
rfd = "0.17.2"
iced_aw = { version = "0.13.1", features = ["badge"] }
tokio = "1.50.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.29"
env_logger = "0.11.9"
reqwest = { version = "0.13.2", features = ["json"] }
semver = "1.0.27"

[profile.release]
lto = true
strip = true
debug = false
panic = "abort"
opt-level = "z"
codegen-units = 1
